[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Map_Parts/MP-49-Flame_Down_Back.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-49-Flame_Down_Top.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Map_Parts/Parts/MP-49-Fire_Thing_Part_Flame.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="MP-49-Fire_Thing_Part_Flame" type="Area2D"]
collision_layer = 8
collision_mask = 35458
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="Mp-49-FlameDownBack" type="Sprite" parent="."]
modulate = Color( 1, 1, 0.278431, 1 )
position = Vector2( 0, 10 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="Mp-49-FlameDownTop" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 10 )
texture = ExtResource( 2 )
hframes = 4
frame = 2

[connection signal="body_entered" from="." to="." method="_on_MP49Fire_Thing_Part_Flame_body_entered"]
